fix: Carry-Over 멱등성을 별도 플래그로 분리하고 todayKey 기존 점수 보존